# App-Football

./: app.py  app.yaml  clubs.py  clubs_coach.py  data_loader.py  field.py  games.py  games_coach.py  graph.py  graph_st.py  players.py  players_coach.py  principal_page.py  pyproject.toml  rankings.py  requirements.txt  transfers.py
.streamlit/: config.toml
App/: data_loader.py  games.py  games_coach.py  graph.py  graph_st.py  players.py  players_coach.py  principal_page.py  rankings.py  requirements.txt  transfers.py
App/pages/: app_coach.py  app_fans.py
Notebooks/: Notebook  Football Bronze Tables.ipynb  Notebook Football Gold Tables.ipynb  Notebook Football Silver Tables.ipynb  players_age_view.dbquery.ipynb
pages/: app.py  app_coach.py  app_fans.py
